--- a/app/eu/factorx/citizenReserve/views/index.scala.html
+++ b/app/eu/factorx/citizenReserve/views/index.scala.html
@@ -2,18 +2,15 @@
 <html ng-app="app">
     <head>
         <title>Citizen's reserve</title>
-
-            <!-- ------------------------------------------------------------------ -->
-            <!-- JAVASCRIPTS                                                        -->
-            <!-- ------------------------------------------------------------------ -->
-
-            <!-- jQuery -->
+        @* ------------------------------------------------------------------ *@
+        @* JAVASCRIPTS *@
+        @* ------------------------------------------------------------------ *@
+        @* jQuery *@
         <script src='@routes.Assets.at("components/jquery/dist/jquery.min.js")'></script>
         <script src='@routes.Assets.at("components/jquery-ui/jquery-ui.min.js")'></script>
-
+        @* Bootstrap *@
         <script src='@routes.Assets.at("components/bootstrap/dist/js/bootstrap.js")'></script>
-
-            <!-- Angular dependencies local -->
+        @* Angular dependencies local *@
         <script src='@routes.Assets.at("components/angular/angular.js")'></script>
         <script src='@routes.Assets.at("components/angular-i18n/angular-locale_fr-fr.js")'></script>
         <script src='@routes.Assets.at("components/angular-animate/angular-animate.min.js")'></script>
@@ -22,19 +19,13 @@
         <script src='@routes.Assets.at("components/angular-dynamic-locale/src/tmhDynamicLocale.js")'></script>
         <script src='@routes.Assets.at("components/angular-bootstrap/ui-bootstrap.js")'></script>
         <script src='@routes.Assets.at("components/angular-bootstrap/ui-bootstrap-tpls.js")'></script>
-
-            <!-- web app -->
+        @* web app *@
         <script src='@routes.Assets.at("javascripts/app.js")'></script>
-
-            <!-- ------------------------------------------------------------------ -->
-            <!-- STYLES                                                             -->
-            <!-- ------------------------------------------------------------------ -->
-
-        <link rel="stylesheet" media="screen"
-        href='@routes.Assets.at("components/font-awesome/css/font-awesome.min.css")'/>
-        <link rel="stylesheet" media="screen"
-        href='@routes.Assets.at("components/bootstrap/dist/css/bootstrap.min.css")'/>
-
+        @* ------------------------------------------------------------------ *@
+        @* STYLES *@
+        @* ------------------------------------------------------------------ *@
+        <link rel="stylesheet" media="screen" href='@routes.Assets.at("components/font-awesome/css/font-awesome.min.css")'/>
+        <link rel="stylesheet" media="screen" href='@routes.Assets.at("components/bootstrap/dist/css/bootstrap.min.css")'/>
         <link rel="stylesheet" media="screen" href='@routes.Assets.at("style.css")'/>
 
     </head>
@@ -50,6 +41,9 @@
                 </div>
             </div>
         </div>
+
+        <hr/>
+
         <div class="row">
             <div class="container">
                 <div class="col-md-4">
@@ -61,6 +55,7 @@
             </div>
         </div>
 
+        <hr/>
 
         <div class="row">
             <div class="container">
@@ -70,6 +65,42 @@
                 <div class="col-md-8">
                     {{ x.cnt }}
                 </div>
+            </div>
+        </div>
+
+        <hr/>
+
+        <div class="row">
+            <div class="container">
+
+                <tabset class="cr-tabset">
+                    <tab heading="Static title">
+                        <tab-heading>
+                            <i class="fa fa-gear"></i> Options!
+                        </tab-heading>
+
+                        Static content
+                    </tab>
+
+                    <tab select="alertMe()">
+                        <tab-heading>
+                            <i class="fa fa-gear"></i> Options!
+                        </tab-heading>
+
+                        I've got an HTML heading, and a select callback. Pretty cool!
+                    </tab>
+                </tabset>
+
+            </div>
+        </div>
+
+        <hr/>
+
+        <div class="row">
+            <div class="container">
+
+                <cr-range ng-first="x.range.first" ng-second="x.range.second" ng-options="x.range.options" label="Q3000"></cr-range>
+
             </div>
         </div>
 
