--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -1,6 +1,20 @@
+img {
+    max-width: 100%;
+}
+
+.cr-grid {
+    .cr-grid-item {
+        padding: 0 !important;
+        margin: 0 !important;
+        background: lightyellow;
+        border: solid 2px lightslategrey;
+    }
+}
+
 .cr-dropdown {
     display: block;
     width: 100%;
 
 }
+
 
