--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -4,10 +4,8 @@ img {
 
 .cr-grid {
     .cr-grid-item {
-        padding: 0 !important;
-        margin: 0 !important;
-        background: lightyellow;
-        border: solid 2px lightslategrey;
+        padding: 0;
+        border: solid 1px darkgray;
     }
 }
 
