--- a/app/eu/factorx/citizenReserve/views/index.scala.html
+++ b/app/eu/factorx/citizenReserve/views/index.scala.html
@@ -19,6 +19,7 @@
         <script src='@routes.Assets.at("components/angular-dynamic-locale/src/tmhDynamicLocale.js")'></script>
         <script src='@routes.Assets.at("components/angular-bootstrap/ui-bootstrap.js")'></script>
         <script src='@routes.Assets.at("components/angular-bootstrap/ui-bootstrap-tpls.js")'></script>
+        <script src='@routes.Assets.at("components/angular-rangeslider/angular.rangeSlider.js")'></script>
         @* web app *@
         <script src='@routes.Assets.at("javascripts/app.js")'></script>
         @* ------------------------------------------------------------------ *@
@@ -26,13 +27,14 @@
         @* ------------------------------------------------------------------ *@
         <link rel="stylesheet" media="screen" href='@routes.Assets.at("components/font-awesome/css/font-awesome.min.css")'/>
         <link rel="stylesheet" media="screen" href='@routes.Assets.at("components/bootstrap/dist/css/bootstrap.min.css")'/>
+        <link rel="stylesheet" media="screen" href='@routes.Assets.at("components/angular-rangeslider/angular.rangeSlider.css")'/>
         <link rel="stylesheet" media="screen" href='@routes.Assets.at("style.css")'/>
 
     </head>
     <body ng-controller="MainCtrl">
 
-        <div class="row">
-            <div class="container">
+        <div class="container">
+            <div class="row">
                 <div class="col-sm-4">
                     <h4>Example</h4>
                 </div>
@@ -44,8 +46,8 @@
 
         <hr/>
 
-        <div class="row">
-            <div class="container">
+        <div class="container">
+            <div class="row">
                 <div class="col-sm-4">
                     <cr-dropdown label="Q1000" ng-options="x.items" ng-model="x.sel"></cr-dropdown>
                 </div>
@@ -57,8 +59,8 @@
 
         <hr/>
 
-        <div class="row">
-            <div class="container">
+        <div class="container">
+            <div class="row">
                 <div class="col-sm-4">
                     <cr-number label="Q2000" ng-model="x.cnt"></cr-number>
                 </div>
@@ -70,8 +72,8 @@
 
         <hr/>
 
-        <div class="row">
-            <div class="container">
+        <div class="container">
+            <div class="row">
                 <div class="col-md-12">
                     <tabset class="cr-tabset">
                         <tab heading="Static title">
@@ -97,10 +99,10 @@
 
         <hr/>
 
-        <div class="row">
-            <div class="container">
-                <div class="col-12">
-                    <cr-range ng-first="x.range.first" ng-second="x.range.second" ng-options="x.range.options" label="Q3000"></cr-range>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <cr-range ng-range-min="x.range.rangeMin" ng-range-max="x.range.rangeMax" ng-min="x.range.min" ng-max="x.range.max" label="Q3000"></cr-range>
                 </div>
             </div>
         </div>
@@ -108,11 +110,15 @@
         <hr/>
 
         <div class="container">
-            <div class="row cr-grid">
-                <div class="col-sm-3 cr-grid-item" ng-repeat="i in x.grid">
-                    <h3>{{ i.title }}</h3>
-                    <img ng-src="{{i.image}}" alt=""/>
-                    <p>{{ i.content }}</p>
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="cr-grid">
+                        <div class="col-md-3 cr-grid-item" ng-repeat="i in x.grid">
+                            <h3>{{ i.title }}</h3>
+                            <img ng-src="{{i.image}}" alt=""/>
+                            <p>{{ i.content }}</p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
