--- a/app/eu/factorx/citizenReserve/views/index.scala.html
+++ b/app/eu/factorx/citizenReserve/views/index.scala.html
@@ -35,24 +35,28 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
-                    <h4>Example</h4>
-                </div>
-                <div class="col-sm-8">
-                    <h4>Debug</h4>
+                <div class="col-md-12">
+                    <h3>Dropdown</h3>
                 </div>
             </div>
-        </div>
-
-        <hr/>
-
-        <div class="container">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-md-12">
                     <cr-dropdown label="Q1000" ng-options="x.items" ng-model="x.sel"></cr-dropdown>
                 </div>
-                <div class="col-sm-8">
-                    {{ x.sel }}
+            </div>
+        </div>
+
+        <hr/>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>Number</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <cr-number label="Q2000" ng-model="x.cnt"></cr-number>
                 </div>
             </div>
         </div>
@@ -61,18 +65,10 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
-                    <cr-number label="Q2000" ng-model="x.cnt"></cr-number>
-                </div>
-                <div class="col-sm-8">
-                    {{ x.cnt }}
+                <div class="col-md-12">
+                    <h3>Tabset</h3>
                 </div>
             </div>
-        </div>
-
-        <hr/>
-
-        <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <tabset class="cr-tabset">
@@ -102,6 +98,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
+                    <h3>Range 2 inputs</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
                     <cr-double-range ng-range-min="x.doubleRange.rangeMin" ng-range-max="x.doubleRange.rangeMax" ng-min="x.doubleRange.min" ng-max="x.doubleRange.max" label="Q3000"></cr-double-range>
                 </div>
             </div>
@@ -112,9 +113,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <cr-range label="Q4000" ng-model="x.range.value" ng-options="x.range.options"></cr-range>
-                    <cr-range label="Q4000" ng-model="x.range.value" ng-options="x.range.simpleOptions"></cr-range>
-                    <cr-range label="Q4000" ng-model="x.range.value" ng-options="x.range.options" free-allowed="true"></cr-range>
+                    <h3>Radio</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <cr-radio label="Q4000" ng-model="x.radio.value" ng-options="x.radio.options"></cr-radio>
+                    <cr-radio label="Q4000" ng-model="x.radio.value" ng-options="x.radio.simpleOptions"></cr-radio>
+                    <cr-radio label="Q4000" ng-model="x.radio.value" ng-options="x.radio.options" free-allowed="true"></cr-radio>
                 </div>
             </div>
         </div>
@@ -122,6 +128,11 @@
         <hr/>
 
         <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>Grid</h3>
+                </div>
+            </div>
             <div class="row ">
                 <div class="col-md-12">
                     <div class="cr-grid">
@@ -135,8 +146,6 @@
             </div>
 
         </div>
-
-
 
     </body>
 </html>
