--- a/app/eu/factorx/citizenReserve/views/index.scala.html
+++ b/app/eu/factorx/citizenReserve/views/index.scala.html
@@ -72,12 +72,12 @@
             <div class="row">
                 <div class="col-md-12">
                     <tabset class="cr-tabset">
-                        <tab heading="Static title">
+                        <tab>
                             <tab-heading>
-                                <i class="fa fa-gear"></i> Options!
+                                <i class="fa fa-home"></i> Maison
                             </tab-heading>
 
-                            Static content
+                            Contenu
                         </tab>
 
                         <tab select="alertMe()">
