--- a/app/eu/factorx/citizenReserve/views/index.scala.html
+++ b/app/eu/factorx/citizenReserve/views/index.scala.html
@@ -130,6 +130,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
+                    <h3>Slider</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <cr-slider label="Q4000" ng-model="x.slider.value" ng-steps="x.slider.steps"></cr-slider>
+                    <cr-slider label="Q4000" ng-model="x.slider.value" ng-steps="x.slider.simpleSteps"></cr-slider>
+                </div>
+            </div>
+        </div>
+
+        <hr/>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
                     <h3>Grid</h3>
                 </div>
             </div>
