--- a/app/eu/factorx/citizenReserve/views/index.scala.html
+++ b/app/eu/factorx/citizenReserve/views/index.scala.html
@@ -20,6 +20,7 @@
         <script src='@routes.Assets.at("components/angular-bootstrap/ui-bootstrap.js")'></script>
         <script src='@routes.Assets.at("components/angular-bootstrap/ui-bootstrap-tpls.js")'></script>
         <script src='@routes.Assets.at("components/angular-rangeslider/angular.rangeSlider.js")'></script>
+        <script src='@routes.Assets.at("components/angular-gettext/dist/angular-gettext.js")'></script>
         @* web app *@
         <script src='@routes.Assets.at("javascripts/app.js")'></script>
         @* ------------------------------------------------------------------ *@
