--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -17,54 +17,48 @@ img {
 .cr-slider-section {
     position: absolute;
     display: inline-block;
-    height: 24px;
+    height: 2px;
+    width: 50px;
+    top: 38px;
+    margin-left: 25px;
 
-    width: 100px;
-    border-radius: 4px;
-    bottom: 0;
+    border-bottom: solid 2px #d3d3d3;
 
-    .cr-slider-section-line {
-        vertical-align: middle;
-        display: inline-block;
-        height: 2px;
-        width: 100%;
-        border-bottom: solid 2px #d3d3d3;
-        margin-top: 2px;
-    }
-
-    &.active .cr-slider-section-line {
+    &.active {
         border-color: green;
     }
 
-    &.first .cr-slider-section-line {
+    &.first {
         border-bottom-style: dotted;
     }
+
 }
 
 .cr-slider-tick {
     position: absolute;
     display: inline-block;
-    height: 16px;
-    background: #d3d3d3;
-    width: 16px;
-    border-radius: 8px;
-    border: solid 4px #eeeeee;
-    bottom: 4px;
+    height: 50px;
+    width: 50px;
+    border-radius: 1000px;
+    border: solid 16px transparent;
+    box-shadow: inset 0 0 0 4px #eeeeee, inset 0 0 0 100px white;
+    top: 14px;
+    cursor: pointer;
+
+    transition: border-width 0.2s cubic-bezier(0.25, 1.0, 0.5, 1.0);
+
+    &:hover {
+        border-width: 8px;
+        box-shadow: inset 0 0 0 4px #999999, inset 0 0 0 100px white;
+    }
 
     &.first {
-        border: double 3px #eeeeee;
-        background: #ffffff;
+        box-shadow: inset 0 0 0 2px #eeeeee, inset 0 0 0 4px white, inset 0 0 0 6px #eeeeee, inset 0 0 0 100px white;
     }
 
     &.active:not(.first) {
-        position: absolute;
-        display: inline-block;
-        height: 16px;
-        background: #d3d3d3;
-        width: 16px;
-        border-radius: 8px;
-        border: solid 4px green;
-        bottom: 4px;
+        border-width: 12px;
+        box-shadow: inset 0 0 0 4px darkgreen, inset 0 0 0 6px white, inset 0 0 0 100px darkgreen;
     }
 
 }
@@ -74,7 +68,7 @@ img {
     padding: 0;
     width: 100px;
     height: 24px;
-    margin-left: -50px;
-    bottom: 24px;
+    margin-left: -25px;
+    top: 0px;
     text-align: center;
 }
