--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -35,6 +35,10 @@
     </head>
     <body ng-controller="MainCtrl">
 
+        <ng-view></ng-view>
+
+
+
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
