Survey pages canvas

--- a/app/eu/factorx/citizens/angular/views/modal/household/profile/programs.html
+++ b/app/eu/factorx/citizens/angular/views/modal/household/profile/programs.html
@@ -2,7 +2,7 @@
     <h3 class="modal-title">Je suis le topic prgams de household/profile</h3>
 </div>
 <div class="modal-body">
-    <cr-slider label="Q4000" ng-model="responses.Q4000.value" ng-steps="slider.schedule.value"></cr-slider>
+    <!--<cr-slider label="Q4000" ng-model="responses.Q4000.value" ng-steps="slider.schedule.value"></cr-slider>-->
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">Yes</button>
