--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -155,6 +155,43 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
+                    <h3>Slider</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3" ng-repeat="e in [0,1,2]">
+                    <cr-topic active-image="http://lorempixel.com/128/128/sports/1/Active"
+                    inactive-image="http://lorempixel.com/g/128/128/sports/1/Inactive"
+                    hover-image="http://lorempixel.com/128/128/sports/1/Hover"
+                    view="$/angular/views/modal/household/profile/programs.html"
+                    controller="ModalTopicCtrl"></cr-topic>
+                </div>
+
+                <div class="col-md-3" >
+                    <cr-topic
+                    active="true"
+                    active-image="http://lorempixel.com/128/128/sports/1/Active"
+                    inactive-image="http://lorempixel.com/g/128/128/sports/1/Inactive"
+                    hover-image="http://lorempixel.com/128/128/sports/1/Hover"
+                    view="$/angular/views/modal/household/profile/programs.html"
+                    controller="ModalTopicCtrl"></cr-topic>
+                </div>
+
+                <div class="col-md-3" ng-repeat="e in [0,1]">
+                    <cr-topic active-image="http://lorempixel.com/128/128/sports/1/Active"
+                    inactive-image="http://lorempixel.com/g/128/128/sports/1/Inactive"
+                    hover-image="http://lorempixel.com/128/128/sports/1/Hover"
+                    view="$/angular/views/modal/household/profile/programs.html"
+                    controller="ModalTopicCtrl"></cr-topic>
+                </div>
+            </div>
+        </div>
+
+        <hr/>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
                     <h3>Grid</h3>
                 </div>
             </div>
