--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -2,11 +2,13 @@ img {
     max-width: 100%;
 }
 
-.cr-grid {
-    .cr-grid-item {
-        padding: 0;
-        border: solid 1px darkgray;
-    }
+.cr-master {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    overflow-y: auto;
 }
 
 .cr-topic {
