--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -160,6 +160,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <cr-boolean label="Q6000" ng-model="x.yesno.value"></cr-boolean>
+                        <cr-slider label="Q5000" ng-show="x.yesno.value" ng-model="x.continuousSlider.value" min="10" max="2000" step="10"></cr-slider>
                     </div>
                 </div>
             </div>
