--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -2,6 +2,7 @@ img {
     max-width: 100%;
 }
 
+
 .cr-master {
     position: absolute;
     left: 0;
@@ -59,8 +60,12 @@ img {
 }
 
 .cr-slider {
+    background: transparent;
+    display: block;
+    width: 100%;
 
     .cr-slider-container {
+        background: transparent;
         position: relative;
         height: 80px;
         width: 100%;
