--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -183,7 +183,9 @@
                     <div class="col-md-12">
                         <cr-question label="Q6000">
                             <cr-boolean ng-model="x.yesno.value"></cr-boolean>
-                            <cr-slider ng-show="x.yesno.value" ng-model="x.continuousSlider.value" min="10" max="2000" step="10"></cr-slider>
+                            <cr-slider ng-show="x.yesno.value" ng-model="x.continuousSlider.value1" min="10" max="2000" step="10"></cr-slider>
+                            <cr-slider ng-show="x.yesno.value" ng-model="x.continuousSlider.value2" min="10" max="2000" step="10"></cr-slider>
+                            <cr-slider ng-show="x.yesno.value" ng-model="x.continuousSlider.value3" min="10" max="2000" step="10"></cr-slider>
                         </cr-question>
                     </div>
                 </div>
