--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="app">
+<html ng-app="app" xmlns="">
     <head>
         <title>Citizen's reserve</title>
         <meta charset="utf-8"/>
@@ -60,7 +60,6 @@
                                 <cr-question label="profile.Q1110.label">
                                     <cr-dropdown ng-options="x.items" ng-model="x.sel"></cr-dropdown>
                                 </cr-question>
-
 
                             </tab>
 
@@ -145,11 +144,27 @@
                                     <i class="fa fa-gear"></i> Topic
                                 </tab-heading>
 
-                                <div class="col-md-3" ng-repeat="e in [0,1,2]">
+                                <div class="col-md-3" >
                                     <cr-topic active-image="http://lorempixel.com/128/128/sports/1/Active"
-                                    inactive-image="http://lorempixel.com/g/128/128/sports/1/Inactive"
+                                    inactive-image="http://lorempixel.com/g/128/128/sports/1/PROGRAMMES"
                                     hover-image="http://lorempixel.com/128/128/sports/1/Hover"
-                                    view="$/angular/views/modal/household/profile/programs.html"
+                                    view="$/angular/views/topics/t01-programs.html"
+                                    controller="ModalTopicCtrl"></cr-topic>
+                                </div>
+
+                                <div class="col-md-3">
+                                    <cr-topic active-image="http://lorempixel.com/128/128/sports/1/Active"
+                                    inactive-image="http://lorempixel.com/g/128/128/sports/1/PRESENCE"
+                                    hover-image="http://lorempixel.com/128/128/sports/1/Hover"
+                                    view="$/angular/views/topics/t02-presence.html"
+                                    controller="ModalTopicCtrl"></cr-topic>
+                                </div>
+
+                                <div class="col-md-3">
+                                    <cr-topic active-image="http://lorempixel.com/128/128/sports/1/Active"
+                                    inactive-image="http://lorempixel.com/g/128/128/sports/1/CHAUFFAGE"
+                                    hover-image="http://lorempixel.com/128/128/sports/1/Hover"
+                                    view="$/angular/views/topics/t03-heating.html"
                                     controller="ModalTopicCtrl"></cr-topic>
                                 </div>
 
@@ -157,17 +172,17 @@
                                     <cr-topic
                                     active="true"
                                     active-image="http://lorempixel.com/128/128/sports/1/Active"
-                                    inactive-image="http://lorempixel.com/g/128/128/sports/1/Inactive"
+                                    inactive-image="http://lorempixel.com/g/128/128/sports/1/ECLAIRAGE"
                                     hover-image="http://lorempixel.com/128/128/sports/1/Hover"
-                                    view="$/angular/views/modal/household/profile/programs.html"
+                                    view="$/angular/views/topics/t04-lighting.html"
                                     controller="ModalTopicCtrl"></cr-topic>
                                 </div>
 
-                                <div class="col-md-3" ng-repeat="e in [0,1]">
+                                <div class="col-md-3">
                                     <cr-topic active-image="http://lorempixel.com/128/128/sports/1/Active"
-                                    inactive-image="http://lorempixel.com/g/128/128/sports/1/Inactive"
+                                    inactive-image="http://lorempixel.com/g/128/128/sports/1/REPAS"
                                     hover-image="http://lorempixel.com/128/128/sports/1/Hover"
-                                    view="$/angular/views/modal/household/profile/programs.html"
+                                    view="$/angular/views/topics/t05-dinner.html"
                                     controller="ModalTopicCtrl"></cr-topic>
                                 </div>
                             </tab>
