option / anszer service

--- a/app/eu/factorx/citizens/angular/views/household-profile.html
+++ b/app/eu/factorx/citizens/angular/views/household-profile.html
@@ -29,5 +29,14 @@
                     ng-click="$root.redirectTo('/household-action/programs')">
             </button>
         </div>
+
+        <row>
+
+
+            <button class="col-md-2"
+                    ng-click="openTopic('registration')"> TEST !!
+            </button>
+
+        </row>
     </div>
 </div>
