--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -2,6 +2,13 @@ img {
     max-width: 100%;
 }
 
+.cr-question {
+    margin-bottom: 2em;
+    .cr-question-label {
+        font-weight: normal;
+        font-style: italic;
+    }
+}
 
 .cr-master {
     position: absolute;
@@ -142,6 +149,7 @@ img {
             top: 0px;
             text-align: center;
             color: #999999;
+            cursor: default;
 
             &.active {
                 color: black;
@@ -151,89 +159,90 @@ img {
     }
 
     .cr-slider-container-vertical {
-            background: transparent;
+        background: transparent;
+        position: relative;
+        width: 100%;
+        overflow-x: auto;
+        display: table;
+
+        .cr-slider-null-box {
+            display: table-cell;
+            position: relative;
+            min-width: 50px;
+        }
+        .cr-slider-not-null-box {
+            display: table-cell;
             position: relative;
             width: 100%;
             overflow-x: auto;
-            display: table;
+        }
 
-            .cr-slider-null-box {
-                display: table-cell;
-                position: relative;
-                min-width: 50px;
-            }
-            .cr-slider-not-null-box {
-                display: table-cell;
-                position: relative;
-                width: 100%;
-                overflow-x: auto;
-            }
+        .cr-slider-section {
+            position: absolute;
+            display: inline-block;
+            width: 2px;
+            height: 50px;
+            margin-top: 38px;
+            margin-left: 25px;
+            border-left: solid 2px #d3d3d3;
 
-            .cr-slider-section {
-                position: absolute;
-                display: inline-block;
-                width: 2px;
-                height: 50px;
-                margin-top: 38px;
-                margin-left: 25px;
-                border-left: solid 2px #d3d3d3;
-
-                &.active {
-                    border-color: green;
-                }
-
-                &.first {
-                    height: 2px;
-                    width: 50px;
-                    border-left: none;
-                    border-bottom: dotted 2px #d3d3d3;
-                }
-
+            &.active {
+                border-color: green;
             }
 
-            .cr-slider-tick {
-                position: absolute;
-                display: inline-block;
-                height: 50px;
+            &.first {
+                height: 2px;
                 width: 50px;
-                border-radius: 1000px;
-                border: solid 16px transparent;
-                box-shadow: inset 0 0 0 4px #eeeeee, inset 0 0 0 100px white;
-                cursor: pointer;
-                margin-top: 14px;
-
-                transition: border-width 0.2s cubic-bezier(0.25, 1.0, 0.5, 1.0);
-
-                &:hover {
-                    border-width: 8px;
-                    box-shadow: inset 0 0 0 4px #999999, inset 0 0 0 100px white;
-                }
-
-                &.first {
-                    box-shadow: inset 0 0 0 2px #eeeeee, inset 0 0 0 4px white, inset 0 0 0 6px #eeeeee, inset 0 0 0 100px white;
-                }
-
-                &.active:not(.first) {
-                    border-width: 12px;
-                    box-shadow: inset 0 0 0 4px darkgreen, inset 0 0 0 6px white, inset 0 0 0 100px darkgreen;
-                }
-
+                border-left: none;
+                border-bottom: dotted 2px #d3d3d3;
             }
 
-            .cr-slider-text {
-                position: absolute;
-                padding: 0;
-                width: 100px;
-                height: 24px;
-                margin-left: 50px;
-                margin-top: 30px;
-                text-align: left;
-                color: #999999;
+        }
 
-                &.active {
-                    color: black;
-                    font-weight: bold;
-                }
+        .cr-slider-tick {
+            position: absolute;
+            display: inline-block;
+            height: 50px;
+            width: 50px;
+            border-radius: 1000px;
+            border: solid 16px transparent;
+            box-shadow: inset 0 0 0 4px #eeeeee, inset 0 0 0 100px white;
+            cursor: pointer;
+            margin-top: 14px;
+
+            transition: border-width 0.2s cubic-bezier(0.25, 1.0, 0.5, 1.0);
+
+            &:hover {
+                border-width: 8px;
+                box-shadow: inset 0 0 0 4px #999999, inset 0 0 0 100px white;
+            }
+
+            &.first {
+                box-shadow: inset 0 0 0 2px #eeeeee, inset 0 0 0 4px white, inset 0 0 0 6px #eeeeee, inset 0 0 0 100px white;
+            }
+
+            &.active:not(.first) {
+                border-width: 12px;
+                box-shadow: inset 0 0 0 4px darkgreen, inset 0 0 0 6px white, inset 0 0 0 100px darkgreen;
+            }
+
+        }
+
+        .cr-slider-text {
+            position: absolute;
+            padding: 0;
+            right: 0;
+            left: 50px;
+            height: 24px;
+            margin-top: 30px;
+            text-align: left;
+            color: #999999;
+            cursor: default;
+
+            &.active {
+                color: black;
+                font-weight: bold;
             }
         }
+    }
 }
