--- a/app/eu/factorx/citizens/angular/views/topics/t01-programs.html
+++ b/app/eu/factorx/citizens/angular/views/topics/t01-programs.html
@@ -3,13 +3,13 @@
 </div>
 <div class="modal-body">
 
-    <cr-question label="Q1110">
+    <cr-question label="profile.Q1110.label">
         <cr-slider ng-model="q1110" min="0" max="5" step="1"></cr-slider>
     </cr-question>
-    <cr-question label="Q1120">
+    <cr-question label="profile.Q1120.label">
         <cr-slider ng-model="q1120" min="0" max="5" step="1"></cr-slider>
     </cr-question>
-    <cr-question label="Q1130">
+    <cr-question label="profile.Q1130.label">
         <cr-slider ng-model="q1130" min="0" max="5" step="1"></cr-slider>
     </cr-question>
 </div>
