--- a/app/eu/factorx/citizens/angular/views/topics/t02-presence.html
+++ b/app/eu/factorx/citizens/angular/views/topics/t02-presence.html
@@ -2,7 +2,7 @@
     <h3 class="modal-title">Présence au domicile</h3>
 </div>
 <div class="modal-body">
-    <cr-question label="Q1130">
+    <cr-question label="profile.Q1130.label">
         <cr-slider ng-model="q1130" vertical="true" ng-steps="[{value: null, label:null}, {value: 17, label:'BEFORE_1700_HOURS'}, {value: 18, label:'BEFORE_1800_HOURS'}, {value: 19, label:'BEFORE_1900_HOURS'} ,{value: 20, label:'BEFORE_2000_HOURS'}, {value: 100, label:'AFTER_2000_HOURS'}]"></cr-slider>
     </cr-question>
 </div>
