--- a/app/eu/factorx/citizens/angular/views/topics/t04-lighting.html
+++ b/app/eu/factorx/citizens/angular/views/topics/t04-lighting.html
@@ -3,27 +3,33 @@
 </div>
 <div class="modal-body">
 
-    <cr-question label="Q1160">
+    <cr-question label="profile.Q1160.label">
         <cr-slider ng-model="q1160" min="0" max="5" step="1"></cr-slider>
     </cr-question>
-    <cr-question label="Q1220">
+    <cr-question label="profile.Q1220.label">
         <cr-slider ng-model="q1220" min="0" max="5" step="1"></cr-slider>
     </cr-question>
-    <cr-question label="Q1230">
+    <cr-question label="profile.Q1230.label">
         <cr-slider ng-model="q1230" min="0" max="5" step="1"></cr-slider>
     </cr-question>
-    <cr-question label="Q1700">
+    <cr-question label="profile.Q1700.label">
         <cr-slider ng-model="q1700" min="0" max="5" step="1"></cr-slider>
     </cr-question>
-    <cr-question label="Q1750">
+    <cr-question label="profile.Q1750.label">
         <cr-slider ng-model="q1750" vertical="true" ng-steps="[{value: null, label: null}, {value: 1, label:'des lampes LED'},{value: 2, label:' des lampes fluo-compactes'},{value: 3, label:' des lampes halogènes'},{value: 4, label:'des ampoules classiques'}]"></cr-slider>
     </cr-question>
-    <cr-question label="Q1800">
-        <cr-slider ng-model="q1800" min="0" max="1000" step="10"></cr-slider>
+    <cr-question label="profile.Q1800.label">
+        <cr-slider ng-model="q1800" min="0" max="1000" step="10" filter="toWatts"></cr-slider>
     </cr-question>
-    <cr-question label="Q2000">
-        <cr-slider ng-model="q2000" min="0" max="5" step="1"></cr-slider>
-    </cr-question>
+
+    <cr-section label="profile.Q2000.label">
+        <cr-question label="profile.Q2010.label">
+            <cr-slider ng-model="q2010" vertical="true" ng-steps="[{value: null, label: null},{value: 0, label:'quasiment jamais'},{value: 1, label:'en moyenne 15 minutes par jour'},{value: 2, label:'en moyenne 30 minutes par jour'},{value: 3, label:'en moyenne 45 minutes par jour'},{value: 4, label:'en moyenne 1 heure par jour ou plus'}]"></cr-slider>
+        </cr-question>
+    </cr-section>
+
+
+
 
 </div>
 <div class="modal-footer">
