--- a/app/eu/factorx/citizens/angular/views/topics/t05-dinner.html
+++ b/app/eu/factorx/citizens/angular/views/topics/t05-dinner.html
@@ -2,7 +2,7 @@
     <h3 class="modal-title">Repas</h3>
 </div>
 <div class="modal-body">
-    <cr-question label="Q4000">
+    <cr-question label="profile.Q4000.label">
         <cr-slider ng-model="responses.Q4000.value" ng-steps="slider.schedule.value"></cr-slider>
     </cr-question>
 </div>
