--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -65,6 +65,18 @@
 
                             <tab>
                                 <tab-heading>
+                                    <i class="fa fa-gear"></i> Text
+                                </tab-heading>
+
+                                <cr-question label="Q6000">
+                                    <cr-text ng-model="x.firstName"></cr-text>
+                                    <cr-text multiline="true" ng-model="x.comment"></cr-text>
+                                </cr-question>
+                            </tab>
+
+
+                            <tab>
+                                <tab-heading>
                                     <i class="fa fa-gear"></i> Number
                                 </tab-heading>
 
