add account to surveyDtoService

--- a/app/eu/factorx/citizens/angular/views/modal/household/profile/registration.html
+++ b/app/eu/factorx/citizens/angular/views/modal/household/profile/registration.html
@@ -10,8 +10,8 @@
     <!-- Q5150 generic.zip -->
 
     <!-- Q5150 generic.zip -->
-    <cr-question label="Q1500.label">
-        <cr-slider ng-steps="getOptions('Q1500')" ng-model="getAnswerValue('Q1500',null).stringValue" vertical="true"></cr-slider>
+    <cr-question label="profile.powerprovider.label">
+        <cr-slider ng-steps="getOptions('Q5210')" ng-model="getAccount().powerProvider" vertical="true"></cr-slider>
     </cr-question>
 
 </div>
