--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -89,6 +89,7 @@ img {
             position: relative;
             width: 100%;
             overflow-x: auto;
+            overflow-y: hidden;
         }
 
         .cr-slider-section {
@@ -175,6 +176,7 @@ img {
             position: relative;
             width: 100%;
             overflow-x: auto;
+            overflow-y: hidden;
         }
 
         .cr-slider-section {
