Fixed routes problems

--- a/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
@@ -6,23 +6,23 @@
         <div class="row">
 
             <button class="col-md-2" ng-bind-html="'topic.programs.label' | translate"
-                    ng-click="openTopic('programs')">
+                    ng-click="openTopic('t01-programs')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'topic.presence.label' | translate"
-                    ng-click="openTopic('presence')">
+                    ng-click="openTopic('t02-presence')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'topic.heat.label' | translate"
-                    ng-click="openTopic('heat')">
+                    ng-click="openTopic('t03-heating')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'topic.light.label' | translate"
-                    ng-click="openTopic('light')">
+                    ng-click="openTopic('t04-lighting')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'topic.cook.label' | translate"
-                    ng-click="openTopic('cook')">
+                    ng-click="openTopic('t05-dinner')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'generic.next' | translate"
