--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/t01-programs.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/t01-programs.html
@@ -4,13 +4,13 @@
 <div class="modal-body">
 
     <cr-question label="Q1110.label">
-        <cr-slider ng-model="getAnswerValue('q1110')" min="0" max="5" step="1"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1110').stringValue" min="0" max="5" step="1"></cr-slider>
     </cr-question>
     <cr-question label="Q1120.label">
-        <cr-slider ng-model="getAnswerValue('q1120')" min="0" max="5" step="1"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1120').stringValue" min="0" max="5" step="1"></cr-slider>
     </cr-question>
     <cr-question label="Q1130.label">
-        <cr-slider ng-model="getAnswerValue('q1130')" min="0" max="5" step="1"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1130').stringValue" min="0" max="5" step="1"></cr-slider>
     </cr-question>
 </div>
 <div class="modal-footer">
