--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -254,3 +254,19 @@ img {
         }
     }
 }
+
+.cr-text {
+    .cr-text-input {
+        min-width: 100%;
+        max-width: 100%;
+        width: 100%;
+    }
+
+    .cr-text-textarea {
+        min-width: 100%;
+        max-width: 100%;
+        width: 100%;
+
+        min-height: 100px;
+    }
+}
