--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -70,7 +70,12 @@
 
                                 <cr-question label="Q6000"> {{x.firstName}}
                                     <cr-text ng-model="x.firstName"></cr-text>
+                                </cr-question>
+                                <cr-question label="Q6000"> {{x.firstName}}
                                     <cr-text multiline="true" ng-model="x.comment"></cr-text>
+                                </cr-question>
+                                <cr-question label="Q6000"> {{x.firstName}}
+                                    <cr-text type="password" ng-model="x.password"></cr-text>
                                 </cr-question>
                             </tab>
 
