--- a/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
@@ -40,6 +40,9 @@
             <button class="col-md-2"
                     ng-click="save()"> SAVE !!
             </button>
+            <button class="col-md-2"
+                    ng-click="load()"> LOAD !!
+            </button>
 
         </row>
     </div>
