Implementing actions forms

--- a/app/eu/factorx/citizens/angular/views/household/action/household-action.html
+++ b/app/eu/factorx/citizens/angular/views/household/action/household-action.html
@@ -6,23 +6,23 @@
         <div class="row">
 
             <button class="col-md-2" ng-bind-html="'topic.programs.label' | translate"
-                    ng-click="openTopic('programs')">
+                    ng-click="openModal('household/action/topics/t01-action-programs')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'topic.presence.label' | translate"
-                    ng-click="openTopic('presence')">
+                    ng-click="openModal('household/profile/topics/t02-action-presence')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'topic.heat.label' | translate"
-                    ng-click="openTopic('heat')">
+                    ng-click="openModal('household/profile/topics/t03-action-heating')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'topic.light.label' | translate"
-                    ng-click="openTopic('light')">
+                    ng-click="oopenModal('household/action/topics/t04-action-light')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'topic.cook.label' | translate"
-                    ng-click="openTopic('cook')">
+                    ng-click="openModal('household/action/topics/t05-action-cook')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'generic.next' | translate"
