--- a/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
@@ -6,23 +6,23 @@
         <div class="row">
 
             <button class="col-md-2" ng-bind-html="'topic.programs.label' | translate"
-                    ng-click="openTopic('t01-programs')">
+                    ng-click="openModal('household/profile/topics/t01-programs')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'topic.presence.label' | translate"
-                    ng-click="openTopic('t02-presence')">
+                    ng-click="openModal('household/profile/topics/t02-presence')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'topic.heat.label' | translate"
-                    ng-click="openTopic('t03-heating')">
+                    ng-click="openModal('household/profile/topics/t03-heating')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'topic.light.label' | translate"
-                    ng-click="openTopic('t04-lighting')">
+                    ng-click="openModal('household/profile/topics/t04-lighting')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'topic.cook.label' | translate"
-                    ng-click="openTopic('t05-dinner')">
+                    ng-click="openModal('household/profile/topics/t05-dinner')">
             </button>
 
             <button class="col-md-2" ng-bind-html="'generic.next' | translate"
@@ -34,7 +34,7 @@
 
 
             <button class="col-md-2"
-                    ng-click="openTopic('registration')"> TEST !!
+                    ng-click="openModal('household/account/registration')"> TEST !!
             </button>
 
             <button class="col-md-2"
