--- a/app/eu/factorx/citizens/angular/views/household/action/topics/t01-action-presence.html
+++ b/app/eu/factorx/citizens/angular/views/household/action/topics/t01-action-presence.html
@@ -1,10 +1,15 @@
 <div class="modal-header">
-    <h3 class="modal-title">Présence au domicile</h3>
+    <h3 class="modal-title">Sortir</h3>
 </div>
 <div class="modal-body">
-    <cr-question label="Q1300.label">
-        <cr-slider ng-model="getAnswerValue('Q1300').doubleValue" min="0" max="20" step="1"></cr-slider>
+    <cr-question label="Q3210.label">
+        <cr-boolean ng-model="getAnswerValue('Q3210').booleanValue"></cr-boolean>
     </cr-question>
+
+    <cr-question label="Q3211.label" cr-conditionned="Q3211" >
+        <cr-slider ng-model="getAnswerValue('Q3211').stringValue" ng-steps="[null, '1', '2', '3', '4']"></cr-slider>
+    </cr-question>
+
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">Yes</button>
